--- a/UT5/proxy_inverso/Vagrantfile
+++ b/UT5/proxy_inverso/Vagrantfile
@@ -1,12 +1,22 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
-
-# All Vagrant configuration is done below. The "2" in Vagrant.configure
-# configures the configuration version (we support older styles for
-# backwards compatibility). Please don't change it unless you know what
-# you're doing.
 Vagrant.configure("2") do |config|
-  config.vm.box = "gusztavvargadr/ubuntu-desktop"
-  config.vm.network "private_network", ip: "192.168.10.10" , virtualbox__intnet: "red_interna"
-  config.vm.network "public_network"
+	config.vm.box = "gusztavvargadr/ubuntu-desktop"
+	config.vm.network "public_network"
+	config.vm.network "private_network", ip: "192.168.50.10", virtualbox__intnet: "redInterna"
+	config.vm.synced_folder "./", "/sincronizada"
+	
+	config.vm.provision "shell", inline: <<-SHELL
+		apt-get update
+        loadkeys es
+		apt-get install curl -y
+		curl -fsSL https://get.docker.com -o get-docker.sh
+		sh get-docker.sh
+		groupadd docker
+		usermod -aG docker $USER
+		newgrp docker
+		apt-get install docker-compose
+        usermod -aG sudo $USER
+		cp /sincronizada/docker-compose.yml /home/vagrant/
+		docker network create proxy_inverso
+		docker-compose up -d
+	SHELL
 end
